[package]
name = "tokache"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/onporat/tokache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dateparser = "0.2"
dirs = "5.0"
md5 = "0.7"
j9 = "0.1"
